--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -4,6 +4,11 @@ $default-font: "roboto-example", sans-serif;
 $accent: orange;
 $text-color: #000;
 $def-fnz: 16px;
+$timing        : 265ms;
+$iconColor     : #ff003c;
+$accent        : #c648c8;
+$grape         : #7b00e0;
+$orchid        : #ae31d9;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
