--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,57 +2,59 @@
 @import "fonts";
 
 ::placeholder {
-	color: #ccc;
-	@include transition-animation;
-}
-	
-::selection {
-	background-color: $accent;
-	color: #fff;
+  color: #ccc;
+  @include transition-animation;
 }
 
-html, body {
-	height: 100%;
+::selection {
+  background-color: $accent;
+  color: #fff;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body {
-	font-size: $def-fnz;
-	min-width: 320px;
-	position: relative;
-	line-height: 1.65;
-	font-family: $default-font;
-	overflow-x: hidden;
+  font-size: $def-fnz;
+  min-width: 320px;
+  position: relative;
+  line-height: 1.65;
+  font-family: $default-font;
+  overflow-x: hidden;
 }
 
-input, textarea {
-	border: 1px solid #ccc;
-	padding: 10px;
-	outline: none;
-	@include transition-animation;
-	&:focus:required:invalid {
-		border-color: red;
-	}
-	&:required:valid {
-		border-color: green;
-	}
+input,
+textarea {
+  border: 1px solid #ccc;
+  padding: 10px;
+  outline: none;
+  @include transition-animation;
+  &:focus:required:invalid {
+    border-color: red;
+  }
+  &:required:valid {
+    border-color: green;
+  }
 }
 
 a {
-	text-decoration: none;
-	color: $text-color;
-	&:hover {
-		text-decoration: none;
-	}
+  text-decoration: none;
+  color: $text-color;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .img-responsive {
-	display: block;
-	max-width: 100%;
-	height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
-	
+
 .text-center {
-	text-align: center;
+  text-align: center;
 }
 
 .container {
@@ -68,11 +70,12 @@ a {
   width: 320px;
   height: 280px;
   transform-style: preserve-3d;
-  transition: .7s linear;
-} 
+  transition: 0.7s linear;
+}
 
-.front, .back {
-  font-family: 'Cabin', sans-serif;
+.front,
+.back {
+  font-family: "Cabin", sans-serif;
   position: absolute;
   top: 0;
   left: 0;
@@ -90,7 +93,7 @@ a {
   border-bottom: 1px solid #f5f5f5;
 }
 i {
-  color: #DCB8B2;
+  color: #dcb8b2;
   display: inline-block;
   margin-bottom: 15px;
 }
@@ -113,7 +116,7 @@ p {
 
 .back {
   transform: rotateY(-180deg);
-  background: #DCB8B2;
+  background: #dcb8b2;
   color: white;
 }
 .back h3 {
@@ -137,7 +140,6 @@ p {
   transform: rotateY(180deg);
 }
 
-
 .arrow-btn {
   position: relative;
 
@@ -145,11 +147,10 @@ p {
 
   color: #2fc989;
   border: 4px solid #2fc989;
-  font-size: 14px;    
+  font-size: 14px;
   text-transform: uppercase;
-  letter-spacing: .4em;
-  transition: .2s;
-  transition-delay: .1s;
+  letter-spacing: 0.4em;
+  transition: 0.2s;
 }
 .arrow-btn:hover {
   color: white;
@@ -162,8 +163,8 @@ p {
   bottom: 0;
   z-index: -1;
   overflow: hidden;
-  transition: .35s cubic-bezier(.215,.61,.215,1);
- }
+  transition: 0.35s cubic-bezier(0.215, 0.61, 0.215, 1);
+}
 .arrow-btn span:before {
   content: "";
   position: absolute;
@@ -172,9 +173,9 @@ p {
   width: 150%;
   height: 100%;
   background: #2fc989;
-  transform: skew(-15deg,0);
-  transition: .5s;
- }
+  transform: skew(-15deg, 0);
+  transition: 0.5s;
+}
 .arrow-btn:after {
   content: "";
   position: absolute;
@@ -184,41 +185,90 @@ p {
   height: 2px;
   margin-top: -1px;
   background: #2fc989;
-  transition: .5s;
+  transition: 0.5s;
 }
 .arrow-btn:hover:after {
   width: 140%;
   left: -20%;
 }
-.arrow-btn:hover span:before {left: -25%;}
+.arrow-btn:hover span:before {
+  left: -25%;
+}
 
 .green-button {
-	transition: 0.5s;
+  transition: 0.5s;
 
-		text-decoration: none;
+  text-decoration: none;
 
-		display: inline-block;
-		width: 140px;
-		height: 45px;
-		line-height: 45px;
-		border-radius: 45px;
-		margin: 10px 20px;
-		font-family: 'Montserrat', sans-serif;
-		font-size: 11px;
-		text-transform: uppercase;
-		text-align: center;
-		letter-spacing: 3px;
-		font-weight: 600;
-		color: #524f4e;
-		background: white;
-		box-shadow: 0 8px 15px rgba(0,0,0,.1);
+  display: inline-block;
+  width: 140px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 45px;
+  margin: 10px 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 
-	&:hover {
-		background: #2EE59D;
-		box-shadow: 0 15px 20px rgba(46,229,157,.4);
-		color: white;
-		transform: translateY(-7px);
+  &:hover {
+    background: #2ee59d;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, 0.4);
+    color: white;
+    transform: translateY(-7px);
+  }
+}
+
+.social-icons {
+  li {
+		list-style: none;
+    margin: 0.15em;
+    position: relative;
+    font-size: 1.2em;
+  }
+
+  i {
+    color: #fff;
+    position: absolute;
+		top: 50%;
+    margin-top: -10px;
+    left: 50%;
+    margin-left: -8px;
+		@include transition-animation;
 	}
+	
+  a {
+		display: block;
+    &:before {
+      content: " ";
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      display: block;
+			transition: all .3s ease-out;
+    }
+    &:hover i {
+			transform: scale(1.5);
+			@include transition-animation;
+		}
+		&.social-square {
+			&:before {
+				background: linear-gradient(45deg, $grape, $orchid);
+				border-radius: 10%;
+			}
+	}
+		&:hover {
+			&:before {
+				transform: rotate(-180deg);
+				border-radius: 100%;
+			}
+		}
+  }
 }
 
 @import "media"; // Always at the end
